--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,16 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
 :root {
   --primary: #417CFA;  
   --secondary: #8CAFFB;
   --primary-dark: #203D7A;
   --secondary-dark: #3462C7;
+}
+
+* {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: .5px;
 }
 
 html {
@@ -16,12 +22,78 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(45deg, var(--primary), var(--primary-dark));
+  background: linear-gradient(145deg, var(--primary), var(--primary-dark));
 }
 
 #player {
-  width: 30%;
-  height: 90%;
-  box-shadow: 0 0 6px #11111169;
-  background: linear-gradient(45deg, var(--secondary) 40%, var(--secondary-dark));
+  width: 30vw;
+  height: 90vh;
+  box-shadow: 0 0 10px #11111169;
+  background: linear-gradient(145deg, var(--secondary) 40%, var(--secondary-dark));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: .5rem;
+}
+
+#player img.music-thumb {
+  display: inline-block;
+  width: 75%;
+  box-shadow: 0 0 10px #11111169;
+}
+
+#player .music-data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+}
+
+#player .music-data .music-title {
+  margin: 0 0 .6rem 0;
+  font-size: 1.8rem;
+  font-weight: 300;
+}
+
+#player .music-data .author {
+  font-size: 1rem;
+}
+
+#player .controls {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#player .controls .btn-container {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
+
+#player .controls .btn-container button {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: none;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+#player .controls .btn-container button:hover {
+  cursor: pointer;
+}
+
+#player .controls .btn-container button#music-state {
+  background: var(--primary-dark);
+}
+
+#player .controls .btn-container button i {
+  display: block;
+  font-size: 1.5rem;
 }
