--- a/views/index.html
+++ b/views/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="description" content="A simple music player made with HTML, CSS and JavaScript">
     <meta name="keywords" content="HTML, CSS, JS, Javascript, JavaScript, Music, Player">
-    <link rel="stylesheet" href="public/css/normalize.css">
-    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="../public/css/normalize.css">
+    <link rel="stylesheet" href="../public/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <title>Web Music Player</title>
   </head>
   <body>
     <div id="player">
-      <img src="public/img/about_you.jpg" alt="About You" class="music-thumb">
+      <audio id="audio">
+        <source src="">
+      </audio>
+      <img src="../public/img/about_you.jpg" alt="" class="music-thumb">
 
       <div class="music-data">
         <p class="music-title">undefined</p>
@@ -38,19 +41,9 @@
             <i class="fas fa-forward"></i>
           </button>
         </div>
-
-        <div class="config">
-          <button>
-            <i class="far fa-heart"></i>
-          </button>
-          <button>
-            <i class="fas fa-random"></i>
-          </button>
-          <button>
-            <i class="fas fa-redo-alt"></i>
-          </button>
-        </div>
       </div>
     </div>
+    <script src="../public/js/MusicPlayer.js"></script>
+    <script src="../public/js/index.js"></script>
   </body>
 </html>
