getting data to create MusicPlayer object

--- a/views/index.html
+++ b/views/index.html
@@ -13,9 +13,8 @@
   </head>
   <body>
     <div id="player">
-      <audio id="audio">
-        <source src="">
-      </audio>
+      <audio id="audio"></audio>
+
       <img src="../public/img/about_you.jpg" alt="" class="music-thumb">
 
       <div class="music-data">
