--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <div id="player">
       <audio id="audio"></audio>
 
-      <img src="../public/img/about_you.jpg" alt="" class="music-thumb">
+      <img class="music-thumb">
 
       <div class="music-data">
         <p class="music-title">undefined</p>
