--- a/public/css/main.css
+++ b/public/css/main.css
@@ -85,6 +85,7 @@ body {
   justify-content: center;
   align-items: center;
   color: white;
+  outline: none;
 }
 
 #player .controls .btn-container button:hover {
